# apertium-sme-smn

./: .gitattributes  .gitignore  Makefile.am  README  apertium-sme-smn.sme-smn.dix  apertium-sme-smn.sme-smn.lrx  apertium-sme-smn.sme-smn.metalrx  apertium-sme-smn.sme-smn.t1x  apertium-sme-smn.sme-smn.t2x  apertium-sme-smn.sme-smn.t3x  apertium-sme-smn.sme-smn.t4x  apertium-sme-smn.smn-sme.lrx  apertium-sme-smn.smn-sme.t1x  check_mt-otpt.py  check_mt-otpt_wer.py  configure.ac  gt2apertium.cg3r  hash.sh  modes.xml  rm-deriv-cmp.twol  sh_hash_report_smn.txt  sh_star_report_smn.txt  skuvlahistoria_hash_report_smn.txt
aigin/: AiginLavra_sme2smn_MT - tivvum.txt  aigin.missing.freq  aigin.missing.lemma.rev  aigin.missing.smefst.freq  aigin.original.sme  aigin.smn  aigin.smn.mt
dev/: adding-bidix-ambiguous-to-lrx-by-frequency.py  check_sme_verbs.sh  fi.history.missing.freq  fi_depts.A.missing  fi_depts.Adv.missing  fi_depts.N.missing  fi_depts.N.nocmp.missing  fi_depts.V.missing  fi_depts.V.noder.missing  fi_depts.freq  fi_depts_ficti_hash_dgen.freq  fi_depts_ficti_notgenerated.freq  hash-fi-report.freq  hash-report.freq  hash-skuvla.freq  missinglist.txt  missingsme.txt  nt.missing4plus.csv  ruledocu.sh  sanityoutput  sme_FI.A.cmp.missing  sme_FI.A.missing  sme_FI.A.nocmp.missing  sme_FI.A.noder.missing  sme_FI.Adv.missing  sme_FI.N.cmp.missing  sme_FI.N.missing  sme_FI.N.nocmp.missing  sme_FI.Pron.missing  sme_FI.V.der.missing  sme_FI.V.missing  sme_FI.V.noder.missing  sme_bidix_sanity.sh  sme_blogspot.A.cmp.missing  sme_blogspot.A.nocmp.missing  sme_blogspot.N.cmp.missing  sme_blogspot.N.nocmp.missing  sme_blogspot.V.der.missing  sme_blogspot.V.noder.missing  sme_synonyms.freq  (+5 more)
fi.samediggi/: blogcategory_id_EQ_0_itemid_EQ_195.tmx  blogcategory_id_EQ_105_itemid_EQ_167.tmx  blogcategory_id_EQ_106_itemid_EQ_168.tmx  blogcategory_id_EQ_111_itemid_EQ_175.tmx  blogcategory_id_EQ_124_itemid_EQ_182.tmx  blogcategory_id_EQ_127_itemid_EQ_222.tmx  blogcategory_id_EQ_146_itemid_EQ_233.tmx  blogcategory_id_EQ_147_itemid_EQ_232.tmx  blogcategory_id_EQ_149_itemid_EQ_230.tmx  blogcategory_id_EQ_150_itemid_EQ_229.tmx  blogcategory_id_EQ_162_itemid_EQ_305.tmx  blogcategory_id_EQ_164_itemid_EQ_307.tmx  blogcategory_id_EQ_172_itemid_EQ_317.tmx  blogcategory_id_EQ_181_itemid_EQ_323.tmx  blogcategory_id_EQ_184_itemid_EQ_324.tmx  blogcategory_id_EQ_186_itemid_EQ_327.tmx  blogcategory_id_EQ_213_itemid_EQ_340.tmx  blogcategory_id_EQ_214_itemid_EQ_349.tmx  blogcategory_id_EQ_227_itemid_EQ_359.tmx  blogcategory_id_EQ_228_itemid_EQ_358.tmx  blogcategory_id_EQ_229_itemid_EQ_363.tmx  blogcategory_id_EQ_235_itemid_EQ_370.tmx  blogcategory_id_EQ_236_itemid_EQ_373.tmx  blogcategory_id_EQ_257_itemid_EQ_409.tmx  blogcategory_id_EQ_74_itemid_EQ_127.tmx  blogcategory_id_EQ_75_itemid_EQ_61.tmx  blogcategory_id_EQ_78_itemid_EQ_193.tmx  blogcategory_id_EQ_79_itemid_EQ_67.tmx  blogcategory_id_EQ_82_itemid_EQ_70.tmx  blogcategory_id_EQ_84_itemid_EQ_72.tmx  blogcategory_id_EQ_86_itemid_EQ_108.tmx  blogcategory_id_EQ_87_itemid_EQ_106.tmx  blogcategory_id_EQ_88_itemid_EQ_112.tmx  blogcategory_id_EQ_89_itemid_EQ_113.tmx  blogcategory_id_EQ_90_itemid_EQ_122.tmx  blogcategory_id_EQ_91_itemid_EQ_123.tmx  blogcategory_id_EQ_94_itemid_EQ_177.tmx  blogcategory_id_EQ_99_itemid_EQ_157.tmx  blogsection_id_EQ_11_itemid_EQ_126.tmx  blogsection_id_EQ_14_itemid_EQ_111.tmx  (+383 more)
inc/: parallell-text-not-bidix.freq
nt/: nt.mt  nt.txt
t/: latest-pending.results  latest-regression.results  wiki-tests
test/: sme-smn-biltrans-expected.txt  sme-smn-generator-expected.txt  sme-smn-generator-gold.txt  sme-smn-interchunk-expected.txt  sme-smn-pending-biltrans-expected.txt  sme-smn-pending-chunker-expected.txt  sme-smn-pending-disam-expected.txt  sme-smn-pending-disam2-expected.txt  sme-smn-pending-generator-expected.txt  sme-smn-pending-generator-gold.txt  sme-smn-pending-input.txt  sme-smn-pending-interchunk3-expected.txt  sme-smn-pending-lex-expected.txt  sme-smn-pending-morph-expected.txt  sme-smn-pending-postchunk-expected.txt  sme-smn-pending-pretransfer-expected.txt  sme-smn-postchunk-expected.txt  sme-smn-regression-biltrans-expected.txt  sme-smn-regression-chunker-expected.txt  sme-smn-regression-disam-expected.txt  sme-smn-regression-disam2-expected.txt  sme-smn-regression-generator-expected.txt  sme-smn-regression-generator-gold.txt  sme-smn-regression-input.txt  sme-smn-regression-interchunk-expected.txt  sme-smn-regression-interchunk2-expected.txt  sme-smn-regression-interchunk3-expected.txt  sme-smn-regression-lex-expected.txt  sme-smn-regression-morph-expected.txt  sme-smn-regression-postchunk-expected.txt  sme-smn-regression-pretransfer-expected.txt  smn-sme-chunker-expected.txt  smn-sme-disam-expected.txt  smn-sme-generator-expected.txt  smn-sme-generator-gold.txt  smn-sme-lex-expected.txt  smn-sme-morph-expected.txt  smn-sme-postchunk-expected.txt  smn-sme-pretransfer-expected.txt  tests.json
texts/: 100writers.sme.txt  100writers.smn.txt  6texts_sme.txt  6texts_smn.txt  AiginLavra_Loho1_sme_original.txt  AiginLavra_loho1_smn_MLO.txt  AiginLavra_original_sme.txt  AiginLavra_smn.mt  AiginLavra_smn_MT_and_corrections.txt  Giellagas_homepages.txt  Giellagas_homepages_smntranslation.txt  (+55 more)
(+315 files in other folders)
